# sercom_I2C

./: README.rst  README.rst.license  pyproject.toml
Examples/Main/: code.py
Examples/Sensor/: code.py
Examples/Version_01/Main/: code.py  secrets.py
Examples/Version_01/Sensor/: code.py
Examples/Version_02/Main/: code.py  code_long.py  displayio_flipclock_sercom_I2C_PaulskPt.py  secrets.py
Examples/Version_02/Sensor/: code.py  secrets.py
docs/Version_2/: 2022-0-09_14h50pt_sercom_I2C_V2_sensor_REPL_output.txt  2022-0-09_18h23pt_sercom_I2C_V2_sensor_REPL_output.txt  2022-0-09_19h54pt_sercom_I2C_V2_sensor_REPL_output.txt  2022-0-10_16h41pt_sercom_I2C_V2_main_REPL_output.txt  2022-0-10_16h47pt_sercom_I2C_V2_main_REPL_output_with_memory_free_comparison.txt  2022-10-11_01h38pt_sercom_I2C_V2_main_REPL_output.txt  2022-10-12_13h56pt_sercom_I2C_V2_sensor_REPL_output.txt  2022-10-12_14h47pt_sercom_I2C_V2_sensor_REPL_output.txt  2022-10-12_16h16pt_sercom_I2C_V2_sensor_REPL_output.txt  2022-10-12_20h31pt_sercom_I2C_V2_sensor_REPL_output__NY.txt  2022-10-12_20h40pt_sercom_I2C_V2_sensor_REPL_output_w_Louisvill,KY.txt
