# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2022 Paulus Schulinck
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "sercom_I2C"
description = "Example of serial communication between two Circuitpython devices using UART via I2C wiring."
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Paulus Schulinck @PaulskPt", email = "paul.schulinck@gmail.com"}
]
urls = {Homepage = "https://github.com/PaulskPt/sercom_i2c"}
keywords = [
    "sercom_i2c",
    "circuitpython",
    "micropython",
    "serial",
    "UART",
    "I2C",
    "Main",
    "Sensor"
    "requests",
    "date",
    "time",
    "display",
    "lcd",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
packages = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
